[gd_scene load_steps=3 format=3 uid="uid://b0ikf37qjkdpl"]

[ext_resource type="Script" uid="uid://b6dw1nqwj2idn" path="res://scripts/TemperatureBar.gd" id="1_q18m3"]
[ext_resource type="Texture2D" uid="uid://d10v36wdaq28h" path="res://assets/chevron.png" id="2_5xy08"]

[node name="TemperatureBar" type="Node2D"]
script = ExtResource("1_q18m3")

[node name="FillRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 400.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0541422, 0.0541422, 0.0541422, 1)
metadata/_edit_use_anchors_ = true

[node name="OptimalZone" type="ColorRect" parent="FillRect"]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 49.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.054902, 1, 0.054902, 1)
metadata/_edit_use_anchors_ = true

[node name="TempMarker" type="Sprite2D" parent="."]
position = Vector2(0, 35)
texture = ExtResource("2_5xy08")
